Debugged ftps client Add sms receiver