@@ -8,8 +8,10 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.MalformedURLException;
 import java.net.SocketException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
+import org.apache.commons.net.ftp.FTPClientConfig;
 import org.apache.commons.net.ftp.FTPFile;
 import org.apache.commons.net.ftp.FTPReply;
 import org.apache.commons.net.ftp.FTPSClient;
@@ -19,35 +21,48 @@ import android.util.Log;
 
 public class MyFTPClient extends FTPSClient {
 
-	protected URL url;
+	protected URI url;
 	protected boolean isAuthorized = false;
 
-	public MyFTPClient() {		
-		super("TLS", false);
-		setTrustManager(TrustManagerUtils.getAcceptAllTrustManager());
-		
+	public MyFTPClient() {
+		super(false);
+		FTPClientConfig config = new FTPClientConfig(FTPClientConfig.SYST_UNIX);
+		config.setServerLanguageCode("ru");
+		configure(config);
+
 		setControlEncoding("UTF8");
 		setAutodetectUTF8(true);
+
+		setTrustManager(TrustManagerUtils.getAcceptAllTrustManager());
 		isAuthorized = false;
+
 	}
 
 	public void connect(String surl) throws SocketException, IOException, MalformedURLException {
 		String username = "";
 		String password = "";
-		url = new URL(surl);
+
+		try {
+			url = new URI(surl);
+		} catch (URISyntaxException e) {
+			throw new MalformedURLException(e.getMessage());
+		}
+
 		String authority = url.getUserInfo();
 		if (authority != null) {
 			String[] auth = authority.split(":");
 			username = auth[0];
 			password = auth[1];
 		}
-		
+
 		super.connect(url.getHost(), url.getPort());
-		
+
 		if (!FTPReply.isPositiveCompletion(getReplyCode())) {
 			throw new IOException(getReplyString());
 		}
-		
+		execPBSZ(0);
+		execPROT("P");
+
 		isAuthorized = super.login(username, password);
 		if (!FTPReply.isPositiveCompletion(getReplyCode())) {
 			throw new IOException(getReplyString());
@@ -108,10 +123,12 @@ public class MyFTPClient extends FTPSClient {
 		InputStream in = null;
 		File local_file = null;
 		try {
-			File local_dir = root_dir;
+			File local_dir = null;
 			File rf = new File(remotefile);
-			if (rf.getParent() != null) {
+			if ((rf.getParent() != null) && (!rf.getParent().isEmpty()) && (url.getPath() != null) && (!url.getPath().isEmpty())) {
 				local_dir = new File(rf.getParent().replaceFirst(url.getPath(), root_dir.getAbsolutePath()));
+			} else {
+				local_dir = root_dir;
 			}
 
 			if (!local_dir.exists()) {
@@ -155,10 +172,10 @@ public class MyFTPClient extends FTPSClient {
 		InputStream in = null;
 		try {
 			if (getFileSize(remotefile) > 0) {
-				in = retrieveFileStream(remotefile);				
+				in = retrieveFileStream(remotefile);
 				if (!FTPReply.isPositivePreliminary(getReplyCode())) {
 					throw new IOException(getReplyString());
-				}				
+				}
 				if (in != null) {
 					int count = -1;
 					while ((count = in.read(buffer)) > 0) {
@@ -170,7 +187,7 @@ public class MyFTPClient extends FTPSClient {
 					}
 				}
 			}
-			return res.toString().split("\r?\n");			
+			return res.toString().split("\r?\n");
 		} finally {
 			if (in != null) {
 				in.close();
